// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link renders 1`] = `
<div>
  <div
    class="flex-1 box-border [&_*]:font-sans [&_*]:[box-sizing:inherit] [&_*::before]:[box-sizing:inherit] [&_*::after]:[box-sizing:inherit]"
  >
    <style>
      html {
  box-sizing: initial;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
*,
*::before,
*::after {
  box-sizing: inherit;
}
body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  margin: 0;
  background-color: #fff;
}
@media print {
  body {
    background-color: #fff;
  }
}
#root {
  display: flex;
  flex: 1;
}

    </style>
    <a
      class="m-0 font-inherit font-inherit focus:outline-hidden hover:underline leading-[inherit] text-blue visited:text-purple no-underline"
    >
      Please verify your email
    </a>
  </div>
</div>
`;

exports[`Link when disabled renders disabled link 1`] = `
<div>
  <div
    class="flex-1 box-border [&_*]:font-sans [&_*]:[box-sizing:inherit] [&_*::before]:[box-sizing:inherit] [&_*::after]:[box-sizing:inherit]"
  >
    <style>
      html {
  box-sizing: initial;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
*,
*::before,
*::after {
  box-sizing: inherit;
}
body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  margin: 0;
  background-color: #fff;
}
@media print {
  body {
    background-color: #fff;
  }
}
#root {
  display: flex;
  flex: 1;
}

    </style>
    <a
      aria-disabled="true"
      class="m-0 font-inherit font-inherit focus:outline-hidden hover:underline leading-[inherit] text-gray underline cursor-pointer"
      download="filename"
      rel="noopener"
    >
      Please verify your email
    </a>
  </div>
</div>
`;

exports[`Link when native attributes are provided renders native attributes 1`] = `
<div>
  <div
    class="flex-1 box-border [&_*]:font-sans [&_*]:[box-sizing:inherit] [&_*::before]:[box-sizing:inherit] [&_*::after]:[box-sizing:inherit]"
  >
    <style>
      html {
  box-sizing: initial;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
*,
*::before,
*::after {
  box-sizing: inherit;
}
body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  margin: 0;
  background-color: #fff;
}
@media print {
  body {
    background-color: #fff;
  }
}
#root {
  display: flex;
  flex: 1;
}

    </style>
    <a
      class="m-0 font-inherit font-inherit focus:outline-hidden hover:underline leading-[inherit] text-blue visited:text-purple no-underline cursor-pointer"
      download="filename"
      href="https://toptal.com/filename.txt"
      rel="noopener"
      target="_blank"
    >
      Please verify your email
    </a>
  </div>
</div>
`;

exports[`Link when using react-router Link renders a Link from react-router 1`] = `
<div>
  <div
    class="flex-1 box-border [&_*]:font-sans [&_*]:[box-sizing:inherit] [&_*::before]:[box-sizing:inherit] [&_*::after]:[box-sizing:inherit]"
  >
    <style>
      html {
  box-sizing: initial;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
*,
*::before,
*::after {
  box-sizing: inherit;
}
body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  margin: 0;
  background-color: #fff;
}
@media print {
  body {
    background-color: #fff;
  }
}
#root {
  display: flex;
  flex: 1;
}

    </style>
    <div>
      <a
        class="m-0 font-inherit font-inherit focus:outline-hidden hover:underline leading-[inherit] text-blue visited:text-purple no-underline"
        href="/"
      >
        Please verify your email
      </a>
    </div>
  </div>
</div>
`;
